--- a/clusters/test-bigdata/flux-system/gotk-sync.yaml
+++ b/clusters/test-bigdata/flux-system/gotk-sync.yaml
@@ -25,3 +25,16 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: podinfo-apps
+  namespace: default
+spec:
+  interval: 10m0s
+  path: ./apps/test-bigdata/podinfo
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
