--- a/clusters/test-bigdata/flux-system/gotk-sync.yaml
+++ b/clusters/test-bigdata/flux-system/gotk-sync.yaml
@@ -30,7 +30,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: podinfo-apps
-  namespace: default
+  namespace: flux-system
 spec:
   interval: 10m0s
   path: ./apps/test-bigdata/podinfo
